sibros/templates/argocd-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: argocd
  name: argocd-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server
