sibros/templates/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: sibros-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: sibros
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
